--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -829,26 +829,79 @@ block content
 
 
                 section.container
-                    +b.slider.slider_type_cases
+                    +b.slider.slider_type_objects.slider_type_feedbacks
                         +e.wrapper
                             //- +e.next
                             //- +e.prev
                             +e.items
                                 +e.item
                                     +e.body
-                                        .row 
-                                            .col.col_size_12.col_size-sm_12.col_size-md_6.col_size-lg_6
-                                                img(src="https://info-tses.kz/wp-content/uploads/2019/10/D_x-f9IXkAIpKdo-600x400.jpg")
-                                            .col.col_size_12.col_size-sm_12.col_size-md_6.col_size-lg_6
-                                                |1234
+                                        +b.feedback
+                                            +e.wrapper
+                                                +e.header
+                                                    img(src="https://bk-invent.ru/uploads/images/reviews/10.jpg").feedback__img 
+                                                    +e.name  Людмила Валерьевна
+                                                +e.body
+                                                    +e.title А у нас в доме - канализация!
+                                                    +e.text 
+                                                        | Ура! И у нас на улице праздник! Вернее в нашем доме! Наконец-то у нас появилась канализация, не нужно каждый месяц кого-то вызывать, откачивать, очищать, этот неприятный запах, и много много всяких “плюшек”. Теперь все как у людей! И все, благодаря команде ООО “БК Инвент”! Очень сильно. Договорились, приехали на этой же недели, все построили, все благоустроили, с Водоканалом все порешали. Сервис на высшем уровне!
+                                                        +e.show ещё
+                                                +e.footer
+                                                    img(src="https://bk-invent.ru/images/comments__icon-yandex.png").feedback__icon 
+
+                                
                                 +e.item
                                     +e.body
-                                        +e.title Прокладка водоснабжения г. Ростов-на-Дону, л. Республиканская, 181
-                                        +e.text Повседневная практика показывает, что сложившаяся структура организации требуют от нас анализа модели развития. Разнообразный и богатый опыт укрепление и развитие структуры способствует подготовки и реализации систем массового участия.
+                                        +b.feedback
+                                            +e.wrapper
+                                                +e.header
+                                                    img(src="https://bk-invent.ru/uploads/images/reviews/10.jpg").feedback__img 
+                                                    +e.name  Любовь Сергеевна
+                                                +e.body
+                                                    +e.title 
+                                                    +e.text
+                                                        span.feedback__text-visible Ура! И у нас на улице праздник! Вернее в нашем доме! Наконец-то у нас появилась канализация, 
+                                                        span.feedback__text-invisible 
+                                                            | не нужно каждый месяц кого-то вызывать, откачивать, очищать, этот неприятный запах, и много много всяких “плюшек”. Теперь все как у людей! И все, благодаря команде ООО “БК Инвент”! Очень сильно. Договорились, приехали на этой же недели, все построили, все благоустроили, с Водоканалом все порешали. Сервис на высшем уровне!
+                                                            span.feedback__dide
+                                                                a cкрыть
+                                                        span.feedback__more ... <a>еще</a>
+                                                +e.footer
+                                                    img(src="https://bk-invent.ru/images/comments__icon-blizko.png").feedback__icon 
                                 +e.item
-                                    +e.body 3
+                                    +e.body
+                                        +b.feedback
+                                            +e.wrapper
+                                                +e.header
+                                                    img(src="https://bk-invent.ru/uploads/images/reviews/10.jpg").feedback__img 
+                                                    +e.name  Любовь Сергеевна
+                                                +e.body
+                                                    +e.title 
+                                                    +e.text
+                                                        span.feedback__text-visible Нет ничего вечного. Вот и к нам забрела беда, а точнее проблема на которую мы подбирали подрядчика в течение нескольких лет. (Это должна быть лицензированная организация, с позитивным опытом в работе с бюджетом или иные капризные штуки). Вообщем рекомендации, квалификация, лояльность организации и ее терпение к нам капризным пала на ООО БК Инвент. В вкратце расскажу объем работ: из насосной в нашу многоэтажку проходили
+                                                        span.feedback__text-invisible 
+                                                            | 2 старые трубы: основная и дублирующая. После того как одна вышла из строя быстренько перемахнули на дубляж и вроде все нормально, но когда состояние дубляжа заплакало тут то мы и кинулись! Ну а я человек старой закалки и абы как делать не умею и раз уж менять трубы, то нужен приличный анализ всей водо-канализационной системы. Как где-то говориться: Что даже золотые руки ничего не смогут сделать без специального инструмента, в том числе диагностического. Исследование выявило замену большей части нашей старой системы: пришлось заменить водомерный узел; распределительные трубопроводы с необходимой арматурой; перемычки стояки и прочее. Самое сложное как мне казалось это была санация подземных труб от насосной к зданию. Но к счастью все прошло гладко и без особых нюансов. Вообщем огромное спасибо компании БК Инвент что не оставила нас в сложной ситуации и как это часто бывает в нашем городе не прекращали подачу коммуникаций (все какими то обводами, да времянками). Особая благодарность Калашникову Евгению Ивановичу за то что начало работ скомандовал еще до авансового нашего платежа. Молодцы, рекомендую!
+                                                            span.feedback__dide
+                                                                a cкрыть
+                                                        span.feedback__more ... <a>еще</a>
+                                                +e.footer
+                                                    img(src="https://bk-invent.ru/images/comments__icon-blizko.png").feedback__icon 
+                                
+                                
                                 +e.item
-                                    +e.body 4
+                                    +e.body
+                                        +b.feedback
+                                            +e.wrapper
+                                                +e.header
+                                                    img(src="https://bk-invent.ru/uploads/images/reviews/10.jpg").feedback__img 
+                                                    +e.name  Людмила Валерьевна
+                                                +e.body
+                                                    +e.title А у нас в доме - канализация!
+                                                    +e.text 
+                                                        | Ура! target
+                                                        //- +e.show ещё
+                                                +e.footer
+                                                    img(src="https://bk-invent.ru/images/comments__icon-yandex.png").feedback__icon 
                                 +e.item
                                     +e.body 5
                                 +e.item
@@ -857,19 +910,14 @@ block content
                                     +e.body 7
 
                                     section.container
-                    +b.slider.slider_type_objects
+                    +b.slider.slider_type_cases
                         +e.wrapper
                             //- +e.next
                             //- +e.prev
                             +e.items
                                 +e.item
                                     +e.body
-                                        .row 
-                                            .col.col_size_12.col_size-sm_12.col_size-md_6.col_size-lg_6
-                                                img(src="https://info-tses.kz/wp-content/uploads/2019/10/D_x-f9IXkAIpKdo-600x400.jpg")
-                                            .col.col_size_12.col_size-sm_12.col_size-md_6.col_size-lg_6
-                                                +e.title Прокладка водоснабжения г. Ростов-на-Дону, л. Республиканская, 181
-                                                +e.text Повседневная практика показывает, что сложившаяся структура организации требуют от нас анализа модели развития. Разнообразный и богатый опыт укрепление и развитие структуры способствует подготовки и реализации систем массового участия.
+                                        
                                 +e.item
                                     +e.body 2
                                 +e.item
