--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -4196,7 +4196,7 @@ blog_size($n)
     &__text
         font-size 13px
         line-height 1.3em
-    &_type_cases
+    &_type_objects
         .slider__item
             margin 10px 10px
             background #FFFFFF
@@ -4205,7 +4205,7 @@ blog_size($n)
             box-shadow 0px 2px 10px rgba(0, 0, 0, 0.1)
             border-radius 10px
         .slider__body
-            padding 0px
+            padding 20px
         .slider__text
             padding 0 20px 20px 20px
         .slider__title
@@ -4215,7 +4215,7 @@ blog_size($n)
             border-radius 10px 10px 0 0
         .bx-pager
             bottom 0 !important
-    &_type_objects
+    &_type_cases
         background #FFFFFF
         border 1px solid rgba(231, 231, 231, 0.35)
         box-sizing border-bolx
@@ -4436,3 +4436,71 @@ blog_size($n)
         width 45px
         height 45px 
         background linear-gradient(156.8deg, #2592CF 15%, #2761A5 82.67%)
+
+
+
+// Отзыв
+.feedback
+    align-items stretch
+    display flex
+    width 100%
+    &__wrapper
+        position relative
+        display flex
+        align-content space-between
+        flex-direction column
+    &__header
+        display flex
+        align-items center
+        margin-bottom 10px
+    &__footer
+        margin-top 10px
+        display flex
+        flex-direction row-reverse
+
+    // &__body
+
+    &__img
+        width 50px !important
+        height 50px !important
+        border-radius 100% !important
+    &__name
+        padding 10px
+    &__title
+        line-height 1.24em
+        font-size 16px
+        margin-bottom 10px
+   
+
+    // .feedback__text-visible
+    //     display block
+    .feedback__text-invisible
+        display none
+
+    &__more
+    &__dide
+        a
+            padding-left 5px
+            color #4274d6
+            cursor pointer
+
+    &__text
+        line-height 1.24em
+        font-size 14px
+        &_open
+            .feedback__text-invisible
+                display inherit
+            .feedback__more
+                display none
+        
+    &__icon
+        width 20px !important
+
+// Объект
+.object
+    width 100%
+
+// Кейс
+.case
+    width 100%
+
