--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -363,19 +363,6 @@ block content
                             +e({tag: 'a'}).link Релайнинг/Реновация
 
 
-
-
-                        
-
-
-
-
-
-
-
-
-
-
         .nav
             //- .nav__header
             //-     .nav__back
@@ -1274,17 +1261,22 @@ block content
                                                 +e.footer
                                                     img(src="https://bk-invent.ru/images/comments__icon-zoom.png").feedback__icon                                                                                             
 
+                    .request-feedback
+                        | Отзывы предоствены официальными федеральными интернет-источниками Яндекс, Google, 2Гис, Zoon, Blizko, Flamp, Yell. 
+                        | Данные актуальны на  
+                        span.request-feedback__date
+                
+
                 section.container
                     +b.slider.slider_type_cases
                         +e.wrapper
                             //- +e.next
-                            //- +e.prev
+                            //- +e.prev 
                             +e.items
                                 +e.item
                                     +e.body
-                                        
-                                +e.item
-                                    +e.body 2
+                                    .row 
+                                        .col.col_size_12.col_size-sm_12.col_size-md_6
                                 +e.item
                                     +e.body 3
                                 +e.item
@@ -1363,82 +1355,6 @@ block content
                         img(src="https://bk-invent.ru/uploads/images/banner/gaz/400.jpg")
 
                 .container
-
-                    +b.cases.cases__presentation
-                        +e.wrapper
-                            .cases__next
-                            .cases__prev
-                            +e.items
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/0.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/1.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/2.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/3.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/4.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/5.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/6.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/7.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/8.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/9_1.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/9_2.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/9_3.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/9_4.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/9_5.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/9_6.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/9_7.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/9_8.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/9_9.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/9_10.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/10.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/11.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/12.jpg")
-                                +e.item
-                                    +e.body
-                                        img(data-src="https://bk-invent.ru/images/presentation/13.jpg")
-
 
 
                     .table
