--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -2454,11 +2454,25 @@ ul.list
 .cases
     // border 1px solid #ddd
     //box-shadow 0 4px 8px 5px rgba(207, 207, 207, 0.34)
-   
+    & .bx-wrapper
+        position unset
+    &__header
+        @media (min-width 700px)
+            font-size 28px
+        line-height 1.2em
+        text-align center 
+        font-size 18px 
+        padding 10px 
+        font-weight 600
+        margin-bottom 15px
+
     width 100%
     margin-bottom 40px
     border-radius 5px
-    background linear-gradient(100deg, rgba(238, 238, 238, 1) 0%, rgba(238, 238, 238, 1) 50%, rgba(205, 219, 247, 1) 50%, rgba(205, 219, 247, 1) 100%)
+    border 1px solid rgba(231, 231, 231, 0.35)
+    box-sizing border-box
+    box-shadow 0px 2px 10px rgba(0, 0, 0, 0.1)
+    border-radius 10px
     &__presentation
         background #fff
         display none
@@ -2476,26 +2490,30 @@ ul.list
             right - 20px
     &__item
         overflow hidden
-        //background-image url(../images/cases__item.png), linear-gradient( 107deg, rgba(214,227,254,.3) 0%, rgba(201,199,199,.3) 78%, rgba(213,213,213,.3) 100%)
         margin 0
     &__body
         padding 20px 35px
     &__title
-        font-size 22px
+        @media (min-width 700px)
+            font-size 18px
+        font-size 16px
         line-height 1.2em
-        color #000
-        margin-bottom 30px
-        font-weight 700
+        color #364D8C
+        margin-bottom 15px
+        font-weight 600
     &__text
-        font-size 14px
+
+        font-size 13px
         line-height 1.4em
         margin-bottom 10px
         span
             display block
-            font-size 15px
+            @media (min-width 700px)
+                font-size 14px
+            font-size 13px
             font-weight 600
             margin-bottom 5px
-            margin-top 20px
+            margin-top 10px
 
     // .bx-prev
     // .bx-next
@@ -4228,7 +4246,7 @@ blog_size($n)
         .slider__title
             font-size 20px
             margin 10px 0 
-
+    
     .bx-wrapper
         max-width 1160px !important
         width 100%
@@ -4492,18 +4510,72 @@ blog_size($n)
         font-size 13px
         &_open
             .feedback__text-invisible
-                display inherit
+                display inline
             .feedback__more
                 display none
         
     &__icon
         width 20px !important
 
+.request-feedback
+    text-align center
+    font-size 13px
+    color #616161
+
 // Объект
 .object
     width 100%
+    &__item
+        overflow hidden
+        margin 0
+    &__title
+        @media (min-width 700px)
+            font-size 16px
+        font-size 15px
+        line-height 1.2em
+        color #364D8C
+        margin-bottom 10px
+        font-weight 600
+    &__text
+        font-size 13px
+        line-height 1.4em
+        margin-bottom 10px
+        span
+            display block
+            @media (min-width 700px)
+                font-size 14px
+            font-size 13px
+            font-weight 600
+            margin-bottom 5px
+            margin-top 10px
 
 // Кейс
 .case
     width 100%
-
+    &__item
+        overflow hidden
+        margin 0
+    &__body
+        padding 20px 35px
+        img
+            max-width 100%
+    &__title
+        @media (min-width 700px)
+            font-size 18px
+        font-size 16px
+        line-height 1.2em
+        color #364D8C
+        margin-bottom 15px
+        font-weight 600
+    &__text
+        font-size 13px
+        line-height 1.4em
+        margin-bottom 10px
+        span
+            display block
+            @media (min-width 700px)
+                font-size 14px
+            font-size 13px
+            font-weight 600
+            margin-bottom 5px
+            margin-top 10px
