--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -3043,66 +3043,66 @@ img.zoom-img
     @media (min-width: 790px)
         height 400px
 
-.title
-    position relative
-    margin 30px 0
-    &__wrap
-        &:before
-            @media (min-width 550px)
-                display block
-            display none
-            content " "
-            position absolute
-            width 100%
-            height 4px
-            background #aabfe7
-            top calc(50% - 2px)
-            left 0
-        @media (min-width 550px)
-            padding 20px
-    &__text
-        font-size 28px
-        line-height 1.2em
-        background #fff
-        padding 0 20px
-        text-align center
-        background #fff
-        margin auto
-        display table
-        position relative
-        border-radius 30px
-        @media (min-width 550px)
-            &:before
-            &:after
-                display block
-                content " "
-                position absolute
-                width 4px
-                height 4px
-                background #aabfe7
-                top calc(50% - 2px) 
-            &:before
-                left 0
-                border-radius 0 10px 10px 0
-            &:after 
-                right 0
-                border-radius 10px 0 0 10px
-    &:before
-    &:after 
-        @media (min-width 550px)
-            display block
-        display none
-        content " "
-        position absolute
-        width 14px
-        height 14px
-        background #aabfe7
-        border-radius 20px
-        top calc(50% - 7px)
-    &:before
-        left -10px
-    &:after 
-        right -10px
+// .title
+//     position relative
+//     margin 30px 0
+//     &__wrap
+//         &:before
+//             @media (min-width 550px)
+//                 display block
+//             display none
+//             content " "
+//             position absolute
+//             width 100%
+//             height 4px
+//             background #aabfe7
+//             top calc(50% - 2px)
+//             left 0
+//         @media (min-width 550px)
+//             padding 20px
+//     &__text
+//         font-size 28px
+//         line-height 1.2em
+//         background #fff
+//         padding 0 20px
+//         text-align center
+//         background #fff
+//         margin auto
+//         display table
+//         position relative
+//         border-radius 30px
+//         @media (min-width 550px)
+//             &:before
+//             &:after
+//                 display block
+//                 content " "
+//                 position absolute
+//                 width 4px
+//                 height 4px
+//                 background #aabfe7
+//                 top calc(50% - 2px) 
+//             &:before
+//                 left 0
+//                 border-radius 0 10px 10px 0
+//             &:after 
+//                 right 0
+//                 border-radius 10px 0 0 10px
+//     &:before
+//     &:after 
+//         @media (min-width 550px)
+//             display block
+//         display none
+//         content " "
+//         position absolute
+//         width 14px
+//         height 14px
+//         background #aabfe7
+//         border-radius 20px
+//         top calc(50% - 7px)
+//     &:before
+//         left -10px
+//     &:after 
+//         right -10px
 
 
 .query2result          
@@ -4217,12 +4217,13 @@ blog_size($n)
     &_type_objects
         .slider__item
             margin 10px 10px
-            background #FFFFFF
             border 1px solid rgba(231, 231, 231, 0.35)
             box-sizing border-box
             box-shadow 0px 2px 10px rgba(0, 0, 0, 0.1)
             border-radius 10px
-        .slider__body
+            // background #fff  url(../images/objects__item.png)
+            // background-size 155px
+            // background-position 100px
             padding 20px
         // .slider__text
         //     padding 0 20px 20px 20px
@@ -4234,13 +4235,23 @@ blog_size($n)
         .bx-pager
             @media (max-width 550px)
                 display none !important
-            bottom 0 !important
+            bottom -5px !important
     &_type_cases
-        background #FFFFFF
+        background #fff  url(../images/cases__item.png)
+        background-size 202px
         border 1px solid rgba(231, 231, 231, 0.35)
         box-sizing border-bolx
         box-shadow 0px 2px 10px rgba(0, 0, 0, 0.1)
         border-radius 10px
+        .bx-next
+        .bx-prev
+            background-color #FACC7C !important
+            border 1px solid rgba(206, 169, 103, 0.4) !important
+            box-shadow inset 0px 0px 10px #D1B47F !important
+        .bx-pager-link
+            border 1px solid #E8BE74 !important
+        .bx-pager-link.active
+            background #E8BE74 !important
         .slider__body
             padding 20px 40px 
         .slider__title
@@ -4266,56 +4277,40 @@ blog_size($n)
         align-items center
         bottom -20px
         position relative
-    // .bx-pager-item
     .bx-pager-link
         display block
-        width 10px
-        height 10px
-        border 2px solid #4274d6
+        width 5px
+        height 5px
+        border 1px solid #364D8C
         font-size 0
         border-radius 100% 
-        margin 0 2px
+        margin 0 4px
     .bx-pager-link.active
-        background #4274d6
+        background #364D8C
 
-    
     .bx-next
     .bx-prev
+        background-repeat no-repeat
+        background-position center
         top 50%
         transform translateY(-50%)
         position absolute
         border-radius 100%
-        background #fff
-        border 2px solid #4274d6
-        width 42px 
-        height 42px
+        background-color #5673C3
+        border 1px solid rgba(54, 77, 140, 0.4)
+        box-sizing border-box
+        width 34px 
+        height 34px
         &:before
         &:after
-            content ''
-            position absolute
-            width 15px
-            height 2px
-            background #4274d6
+            display none
     .bx-prev
-        left -20px
-        &:before
-            transform rotate(-45deg)
-            top 14px
-            left 10px
-        &:after
-            transform rotate(45deg)
-            top 24px
-            left 10px
+        left -15px
+        background-image url('../images/arrow-left.svg')
     .bx-next
-        right -20px
-        &:before
-            transform rotate(45deg)
-            top 14px
-            right 10px
-        &:after
-            transform rotate(-45deg)
-            top 24px
-            right 10px
+        right -15px
+        background-image url('../images/arrow-right.svg')
+
 
 // .price-per-day
 
@@ -4557,8 +4552,16 @@ blog_size($n)
         margin 0
     &__body
         padding 20px 35px
+        display flex
+        flex-wrap wrap
         img
             max-width 100%
+    &__img
+        display none
+        @media (min-width 1000px)
+            display block
+            width calc(40% - 20px)
+            margin-right 20px
     &__title
         @media (min-width 700px)
             font-size 18px
@@ -4568,6 +4571,8 @@ blog_size($n)
         margin-bottom 15px
         font-weight 600
     &__text
+        @media (min-width 1000px)
+            width 60%
         font-size 13px
         line-height 1.4em
         margin-bottom 10px
@@ -4579,3 +4584,25 @@ blog_size($n)
             font-weight 600
             margin-bottom 5px
             margin-top 10px
+
+
+.title
+    position relative
+    margin 35px 0 20px 0
+    &__wrap
+        width 100%
+    &__text
+        color #364D8C
+        font-weight 600
+        @media (min-width 550px)
+            font-size 30px
+            border-bottom 4px solid #E5C281
+            padding  10px 50px
+        font-size 25px
+        line-height 1.2em
+        text-align center
+        background #fff
+        margin auto
+        display table
+        position relative
+        padding  10px 0
