--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -6,6 +6,16 @@ block content
         .main
             .content
                 section.container
+                    +b({tag:'span'}).cut
+                        +e.visible 1 
+                        +e.invisible
+                            | 2 
+                            +e.dide 
+                                a cкрыть
+                        +e.more 
+                            +e.ellipsis 
+                            a eщё
+                section.container
                     +b.title 
                         +e.wrap
                             +e.text Реализованные объекты
@@ -171,69 +181,36 @@ block content
                                     +b.case
                                         +e.body
                                             +e.img
-                                                img(src="https://bk-invent.ru/uploads/images/cases-vk-1_1.jpg")   
+                                                img(src="images/c-e-1.jpg")   
                                             +e.text 
-                                                +e.title Провели водопровод в СНТ “Труженик”
+                                                +e.title Электричество в офисное здание Стачки 118
                                     
                                                 span Задача
-                                                | Провести водопровод для хозяйственно-бытовых нужд и пожаротушения 50 домов, находящихся в СНТ, оформить сети и получить лицевой счет
+                                                | В частном жилом доме площадью 398м2 провести комплексные работы по газификации, получить лицевой счет
                                             
                                                 span Особенности проекта
-                                                | Нет данных топосъемки, плотная застройка и мало места для размещения строительной техники, нет готовых точек ввода для создания кольцевой линии подключения возле объекта, линии электропередач и природоохранная зона
-                                            
+                                                | На каждом этаже здания оформить распределительный щиток с предохранителями, оформить розетки около каждого предполагаемого рабочего места, освещение организовать так, чтобы оно обеспечивало необходимый уровень для каждого сотрудника, с возможностью регулирования
+                                               
                                                 span Результаты
-                                                | Кольцевой трубопровод с подключением 50 домов введен в эксплуатацию, все документы согласованы, собственникам установлены индивидуальные счетчики для сдачи показателей
+                                                | Проведено электричество, сети оформлены. Изготовлен проект на все здание, согласован, введен в эксплуатацию.
 
                                 +e.item
                                     +b.case
                                         +e.body
                                             +e.img
-                                                img(src="https://bk-invent.ru/uploads/images/cases-vk-1_1.jpg") 
+                                                img(src="images/c-e-2.jpg") 
                                             +e.text 
-                                                +e.title Рельсы-рельсы, шпалы -шпалы, ехал трамвай, а мы прокладывали канализацию
+                                                +e.title Электрификация “под ключ” частного дома ул. Коммунаров, 33
                                                 
                                                 span Задача
-                                                | Подключить к системе водоотведения частный дом, располагающийся на ул. Ченцова
+                                                | Провести электричество в новый дом, ввести в эксплуатацию
                                             
                                                 span Особенности проекта
-                                                | Изменение точки подключения, проектирование сетей канализации между линией трамвайных путей и зелеными насаждениями. Прокладка трубопровода бестраншейным методом. После того как были раскопаны приямки - начался затяжной дождь. Особенноститсутствие у заказчика колодца и, соответственно, счетчика на точке подключения по водоснабжению.
-                                            
+                                                | Дом 1 этаж, стандартные приборы. Заказчик контролировал работы удаленно, находясь в другом городе
                                                 span Результаты
-                                                | Изготовлен и согласован проект таким образом, что линия не попала в охранную зону. Проложена рабочая сеть канализации. Установлен счетчик в водопроводном колодце во дворе, согласована схема прибора учета в Водоканале. Сеть канализации сдана, получен лицевой счет. Канализация работает исправно.
+                                                | Поэтапно провели работы по электрификации, ввели в эксплуатацию, получили лицевой счет
 
                                
-                                +e.item
-                                    +b.case
-                                        +e.body
-                                            +e.img
-                                                img(src="https://bk-invent.ru/uploads/images/cases-vk-1_1.jpg") 
-                                            +e.text 
-                                                +e.title Подключение водоотведения на перепаде земли для Ветерана ВОВ, ул. Профсоюзная
-                    
-                                                span Задача
-                                                | Провести канализацию по предложенному проекту, подготовить исполнительные документы для сдачи сетей в Водоканал
-                                    
-                                                span Особенности проекта
-                                                | Проектируемая глубина колодца 5м. Магистральная линия проходит на проезжей части. Сеть прокладывалась бестраншейным методом при условии сильного уклона. Бригада была оснащена страховочным поясом, усиленной специальной одеждой для безопасности работы на глубине
-                                        
-                                                span Результаты
-                                                | Сеть проложена и исправно работает. Были подготовлены все исполнительные документы, в том числе профиль бурения. Колодец был проверен на герметичность. Сеть сдали, исправно работает. На протяжении гарантийного срока нареканий не оказалось.
-
-
-                                +e.item
-                                    +b.case
-                                        +e.body
-                                            +e.img
-                                                img(src="https://bk-invent.ru/uploads/images/cases-vk-1_1.jpg")
-                                            +e.text 
-                                                +e.title Подключение водоснабжения и канализации в стесненных условиях центральной части города ул. Варфоломеева
-                            
-                                                span Задача
-                                                | Провести работы “под ключ” по водоснабжению и водоотведению
-                                                span Особенности проекта
-                                                | Перепады земли, антиуклон. Принято решение о том, что сеть водоотведения может прокладываться только напорная. Сети прокладываются параллельно друг другу в проезде шириной не более 3,5 м, с каждой стороны которого стоят дома. В одной из точек трассы между сетями располагается колодец связи. После выхода из проезда располагается большое дерево тополя с корневой системой до 3 м в диаметре. Проект был очень сложен, как в согласовании, так и в реализации. Сети строились последовательно. Сначала водопровод, а потом канализация.
-                                                span Результаты
-                                                | Сети построены, лицевой счет открыт, заказчик пользуется. Еще идет гарантийное время, обращений не поступало.
 
 
 
